--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@ Register
         <div class="invalid-feedback">Please enter your username</div>
     </div>
     <div class="form-group">
-        <input type="email" class="form-control" id="email" placeholder="Email (optional)" name="email">
+        <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
         <div class="invalid-feedback">Please enter your email</div>
     </div>
     <div class="form-group">
