--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@ Register
             required>
         <div class="invalid-feedback">Please confirm your password</div>
     </div>
-    <button class="btn btn-secondary" type="submit">Register</button>
+    <button class="btn btn-primary" type="submit">Register</button>
 </form>
 <div class="alert alert-info my-5" role="alert">
         Username mustn't contain spaces or symbols except for _
