Fixed some styling

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@ project_name
             {% if session.user_id %}
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-                                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Options
                     </a>
@@ -47,7 +47,7 @@ project_name
                     </div>
                   </li>
                 <li class="nav-item active"><a class="nav-link" href="/profile">Profile</a></li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Settings
                     </a>
